--- a/.gitignore
+++ b/.gitignore
@@ -33,4 +33,8 @@ target/
 hs_err_pid*
 replay_pid*
 
-# End of https://www.toptal.com/developers/gitignore/api/java
+#others
+*.iml
+*.lock
+*.tmp
+*.DS_Store
