--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ target/
 .idea/
 
 # for shade dir
-.shade/
+shade/
 
 # Created by https://www.toptal.com/developers/gitignore/api/java
 # Edit at https://www.toptal.com/developers/gitignore?templates=java
